# alef-examples

./: CMakeLists.txt  install-dependencies.cmd  install-dependencies.sh
include/: julianah.h
include/alef/: serializing.h
include/alef/serializing/: julianah.h
include/alef/serializing/julianah/: const_wrapper.h  julianah.h  parsing.h  types.h  utility.h  values.h  wrapper.h
src/: CMakeLists.txt  julianah.cpp  main.cpp
